# bevy_mesh_terrain

./: .gitignore  Cargo.toml  LICENSE  Notes.MD  readme.md  splatv2.md  todo.md
assets/default_terrain/: terrain_config.ron
assets/default_terrain (copy)/: terrain_config.ron
assets/default_terrain (copy)/splatv2/index_maps/: image_convert.sh
assets/default_terrain/splatv2/strength_maps/: clone_images.sh  script1.sh
assets/shaders/: show_prepass.wgsl  terrain.wgsl
examples/: basic.rs
src/: chunk.rs  chunk_old.rs  collider.rs  collision.rs  edit.rs  heightmap.rs  hypersplat.rs  lib.rs  pre_mesh.rs  show_prepass_material.rs  terrain.rs  terrain_config.rs  terrain_loading_state.rs  terrain_material.rs  terrain_scene.rs  tool_preview.rs
src/shaders/: terrain.wgsl
tools/scene_converter/: Cargo.toml
tools/scene_converter/src/: main.rs
