[package]
name = "bevy_mesh_terrain"
description = "A simple and ergonomic heightmap terrain plugin for Bevy game engine"
 
version = "0.14.0"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/bevy_mesh_terrain"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "terrain" , "bevy" ]


[dependencies]
anyhow = "1"
bevy = "0.14"
bevy_mod_sysfail = { version = "8", git = "https://github.com/knutsoned/bevy_mod_sysfail" }
futures-lite = "1.13"
image = "0.24" 
png = "0.17"
ron = "0.8"
serde = { version = "1", features = ["derive"] }
 

thiserror = "1"
 
 
 #maybe put a modifier on this like 'physics'
 avian3d = { version = "0.1", features = ["simd","serialize","collider-from-mesh"] }
serde_json = "1"
bincode = "1.3"
rand = "0.8"
 
[[example]]
name = "basic"
path = "examples/basic.rs"

