[package]
name = "bevy_mesh_terrain"
description = "A simple and ergonomic heightmap terrain plugin for Bevy game engine"
 
version = "0.14.17"
 
 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/ethereumdegen/bevy_mesh_terrain"
exclude = [ "/assets/", "/examples/" ]
keywords = [ "terrain" , "bevy" ]


[dependencies]
anyhow = "1.0.75"
bevy = "0.14.0"
#bevy_mod_sysfail = "6.0.0"
futures-lite = "1.13.0"
image = "0.25.1" 
png = "0.17.11"
ron = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
 

thiserror = "1.0.48"
 
 
 #maybe put a modifier on this like 'physics'
# bevy_xpbd_3d = { version = "0.4.0", features = ["simd","serialize","collider-from-mesh"] }
avian3d = {version = "0.1" , features=["serialize"]}
serde_json = "1.0.113"
bincode = "1.3.3"
rand = "0.8.5"
half = "2.4.1"
 
[[example]]
name = "basic"
path = "examples/basic.rs"

